--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderTotals.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderTotals.Mobile.cshtml
@@ -72,7 +72,7 @@
                 {
                 <tr>
                     <td class="cart-total-left">
-                        <strong>@string.Format(T("ShoppingCart.Totals.TaxRateLine").Text, taxRate.Rate):</strong>
+                        <strong>@taxRate.Label:</strong>
                     </td>
                     <td class="cart-total-right">
                         <span class="product-price">
