--- a/src/Presentation/SmartStore.Web/Views/Product/AskQuestionButton.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Product/AskQuestionButton.cshtml
@@ -2,7 +2,7 @@
 @using SmartStore.Web.Models.Catalog;
 
 <div class="ask-a-question">
-    <a href="@Url.Action("AskQuestion", new { id = Model.ProductId })" rel="nofollow">
+    <a href="@Url.Action("AskQuestion", new { id = Model.Id })" rel="nofollow">
         <i class="fa fa-fw fa-question-circle"></i>
         @T("Products.AskQuestion")
     </a>
