--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -1070,12 +1070,11 @@ table.cart .cart-item-row .qty-input {
 	&:hover { color: @linkColorHover }
 }
 
-.comment-box.cart-box {
-    margin-left: 10px;
+.checkout-confirm-page .comment-box {
 
     textarea {
-        width: 97%;
-        height: 125px;
+        width: 99%;
+        height: 50px;
     }
 }
 
