--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/_CommentBox.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/_CommentBox.cshtml
@@ -1,12 +1,13 @@
 ﻿@model ShoppingCartModel
 @using SmartStore.Web.Models.ShoppingCart;
-@if (Model.DisplayCommentBox)
-{
-    <div class="comment-box cart-box well well-small">
 
-        <h4 class="title">@T("ShoppingCart.CommentBox")</h4>
+<div class="block block-bordered comment-box">
+
+    <div class="block-title">@T("ShoppingCart.CommentBox")</div>
+
+    <div class="block-body">
 
         @Html.TextAreaFor(model => model.CustomerComment, new { placeholder = "Optional" })
 
     </div>
-}
+</div>
