--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/CustomerUser.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/CustomerUser.cshtml
@@ -302,12 +302,13 @@
         }
 
     </script>
+
+	<div class="alert alert-info">
+		<button class="close" data-dismiss="alert">×</button>
+		@T("Admin.Configuration.Settings.CustomerUser.CustomerFormFields.Description")
+	</div>
+	
     <table class="adminContent">
-        <tr>
-            <td colspan="2">
-                <em>@T("Admin.Configuration.Settings.CustomerUser.CustomerFormFields.Description")</em>
-            </td>
-        </tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.CustomerSettings.GenderEnabled)
@@ -561,12 +562,13 @@
         }
 
     </script>
+
+	<div class="alert alert-info">
+		<button class="close" data-dismiss="alert">×</button>
+		@T("Admin.Configuration.Settings.CustomerUser.AddressFormFields.Description")
+	</div>
+	
     <table class="adminContent">
-        <tr>
-            <td colspan="2">
-                <em>@T("Admin.Configuration.Settings.CustomerUser.AddressFormFields.Description")</em>
-            </td>
-        </tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.AddressSettings.CompanyEnabled)
