--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/RewardPoints.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/RewardPoints.cshtml
@@ -19,12 +19,12 @@
 	@Html.ValidationSummary(false)
 	@Html.Action("StoreScopeConfiguration", "Setting")
 
+	<div class="alert alert-info">
+		<button class="close" data-dismiss="alert">×</button>
+		@T("Admin.Configuration.Settings.RewardPoints.Description")
+	</div>
+
     <table class="adminContent">
-        <tr>
-            <td class="adminTitle" colspan="2">
-                @T("Admin.Configuration.Settings.RewardPoints.Description")
-            </td>
-        </tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.Enabled)
@@ -46,68 +46,69 @@
                 @Html.ValidationMessageFor(model => model.ExchangeRate)
             </td>
         </tr>
-        <tr class="adminSeparator">
-            <td colspan="2">
-                <hr />
-                @T("Admin.Configuration.Settings.RewardPoints.Earning")
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.PointsForRegistration)
-            </td>
-            <td class="adminData">
-				@Html.SettingOverrideCheckbox(model => Model.PointsForRegistration)
-                @Html.EditorFor(model => model.PointsForRegistration, new { Small = true })
-                @Html.ValidationMessageFor(model => model.PointsForRegistration)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.PointsForProductReview)
-            </td>
-            <td class="adminData">
-				@Html.SettingOverrideCheckbox(model => Model.PointsForProductReview)
-                @Html.EditorFor(model => model.PointsForProductReview, new { Small = true })
-                @Html.ValidationMessageFor(model => model.PointsForProductReview)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.PointsForPurchases_Amount)
-            </td>
-            <td class="adminData" id="pnlPointsForPurchases">
-				@Html.SettingOverrideCheckbox(model => Model.PointsForPurchases_OverrideForStore, "#pnlPointsForPurchases")
-                @T("Admin.Configuration.Settings.RewardPoints.Earning.Hint1")
-                @Html.EditorFor(model => model.PointsForPurchases_Amount, new { Small = true })
-                @Model.PrimaryStoreCurrencyCode
-                &nbsp;
-                @T("Admin.Configuration.Settings.RewardPoints.Earning.Hint2")
-                @Html.EditorFor(model => model.PointsForPurchases_Points, new { Small = true })
-                @T("Admin.Configuration.Settings.RewardPoints.Earning.Hint3")
-                @Html.ValidationMessageFor(model => model.PointsForPurchases_Amount)
-                @Html.ValidationMessageFor(model => model.PointsForPurchases_Points)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.PointsForPurchases_Awarded)
-            </td>
-            <td class="adminData">
-				@Html.SettingOverrideCheckbox(model => Model.PointsForPurchases_Awarded)
-                @Html.DropDownListFor(model => model.PointsForPurchases_Awarded, ((OrderStatus)Model.PointsForPurchases_Awarded).ToSelectList())
-                @Html.ValidationMessageFor(model => model.PointsForPurchases_Awarded)
-            </td>
-        </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.PointsForPurchases_Canceled)
-            </td>
-            <td class="adminData">
-				@Html.SettingOverrideCheckbox(model => Model.PointsForPurchases_Canceled)
-                @Html.DropDownListFor(model => model.PointsForPurchases_Canceled, ((OrderStatus)Model.PointsForPurchases_Canceled).ToSelectList())
-                @Html.ValidationMessageFor(model => model.PointsForPurchases_Canceled)
-            </td>
-        </tr>
-    </table>
+	</table>
+
+	<fieldset>
+		<legend>@T("Admin.Configuration.Settings.RewardPoints.Earning")</legend>
+
+		<table class="adminContent">
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.PointsForRegistration)
+				</td>
+				<td class="adminData">
+					@Html.SettingOverrideCheckbox(model => Model.PointsForRegistration)
+					@Html.EditorFor(model => model.PointsForRegistration, new { Small = true })
+					@Html.ValidationMessageFor(model => model.PointsForRegistration)
+				</td>
+			</tr>
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.PointsForProductReview)
+				</td>
+				<td class="adminData">
+					@Html.SettingOverrideCheckbox(model => Model.PointsForProductReview)
+					@Html.EditorFor(model => model.PointsForProductReview, new { Small = true })
+					@Html.ValidationMessageFor(model => model.PointsForProductReview)
+				</td>
+			</tr>
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.PointsForPurchases_Amount)
+				</td>
+				<td class="adminData" id="pnlPointsForPurchases">
+					@Html.SettingOverrideCheckbox(model => Model.PointsForPurchases_OverrideForStore, "#pnlPointsForPurchases")
+					@T("Admin.Configuration.Settings.RewardPoints.Earning.Hint1")
+					@Html.EditorFor(model => model.PointsForPurchases_Amount, new { Small = true })
+					@Model.PrimaryStoreCurrencyCode
+					&nbsp;
+					@T("Admin.Configuration.Settings.RewardPoints.Earning.Hint2")
+					@Html.EditorFor(model => model.PointsForPurchases_Points, new { Small = true })
+					@T("Admin.Configuration.Settings.RewardPoints.Earning.Hint3")
+					@Html.ValidationMessageFor(model => model.PointsForPurchases_Amount)
+					@Html.ValidationMessageFor(model => model.PointsForPurchases_Points)
+				</td>
+			</tr>
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.PointsForPurchases_Awarded)
+				</td>
+				<td class="adminData">
+					@Html.SettingOverrideCheckbox(model => Model.PointsForPurchases_Awarded)
+					@Html.DropDownListFor(model => model.PointsForPurchases_Awarded, ((OrderStatus)Model.PointsForPurchases_Awarded).ToSelectList())
+					@Html.ValidationMessageFor(model => model.PointsForPurchases_Awarded)
+				</td>
+			</tr>
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.PointsForPurchases_Canceled)
+				</td>
+				<td class="adminData">
+					@Html.SettingOverrideCheckbox(model => Model.PointsForPurchases_Canceled)
+					@Html.DropDownListFor(model => model.PointsForPurchases_Canceled, ((OrderStatus)Model.PointsForPurchases_Canceled).ToSelectList())
+					@Html.ValidationMessageFor(model => model.PointsForPurchases_Canceled)
+				</td>
+			</tr>
+		</table>
+	</fieldset>
 }
