--- a/src/Presentation/SmartStore.Web/Content/bootstrap/mixins.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/mixins.less
@@ -94,7 +94,7 @@
 // Text overflow
 // -------------------------
 // Requires inline-block or block for proper styling
-.text-overflow() {
+.text-overflow {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
