--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Pictures.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.Pictures.cshtml
@@ -93,7 +93,7 @@
         </tr>
         <tr>
             <td colspan="2" align="left">
-                <button type="button" name="addProductPicture" id="addProductPicture" class="btn">
+                <button type="button" name="addProductPicture" id="addProductPicture" class="btn btn-warning">
                     <i class="fa fa-plus"></i>
                     @T("Admin.Catalog.Products.Pictures.AddButton")
                 </button>
