--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.AssociatedProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/_CreateOrUpdate.AssociatedProducts.cshtml
@@ -4,7 +4,7 @@
 
 @if (Model.Id > 0)
 {
-    <div style="margin: 10px 0px 10px 0px;" class="alert alert-success">
+    <div style="margin: 10px 0px 10px 0px;" class="alert alert-info">
         <div>
             @T("Admin.Catalog.Products.AssociatedProducts.Note1")
             @T("Admin.Catalog.Products.AssociatedProducts.Note2")
