--- a/src/Plugins/SmartStore.GoogleMerchantCenter/Views/FeedFroogle/Configure.cshtml
+++ b/src/Plugins/SmartStore.GoogleMerchantCenter/Views/FeedFroogle/Configure.cshtml
@@ -25,7 +25,8 @@
 	x.Add().Text(T("Plugins.Feed.Froogle.ProductData").Text).Content(@TabProductData());
 }))
 
-@helper TabGeneral() {
+@helper TabGeneral()
+{
     <script type="text/javascript">
     	$(document).ready(function () {
             $("#@Html.FieldIdFor(m => m.TaskEnabled)").click(toggleTaskEnabled);
@@ -448,14 +449,14 @@
 	</form>
 }
 
-@helper TabProductData() {
+@helper TabProductData()
+{
+	<div class="alert alert-info">
+		<button class="close" data-dismiss="alert">×</button>
+		@Html.Raw(@T("Plugins.Feed.Froogle.GridEditNote"))
+	</div>
+
     <table class="adminContent">
-    <tr>
-        <td>
-            @Html.Raw(@T("Plugins.Feed.Froogle.GridEditNote"))
-			<p>&nbsp;</p>
-        </td>
-    </tr>
 	<tr>
 		<td>
 
