Several improvements & fixes

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -1295,6 +1295,12 @@ table.payment-method-features td {
 	}
 }
 
+.themevar-chain-info {
+	color: #bbb;
+	margin-left: 10px;
+	vertical-align: middle;
+}
+
 
 .slides-title {
 	position: relative;
