--- a/src/Presentation/SmartStore.Web/Administration/Views/Theme/Configure.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Theme/Configure.cshtml
@@ -23,7 +23,7 @@
 
     <div class="section-header">
         <div class="title">
-            <i class="fa fa-cog"></i>
+            <i class="fa fa-paint-brush"></i>
             @ViewBag.Title @Html.ActionLink("(" + T("Admin.Common.BackToList") + ")", "List", new { storeId = Model.StoreId })
         </div>
         <div class="options">
