--- a/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
+++ b/src/Presentation/SmartStore.Web/Content/bootstrap/custom/custom.less
@@ -365,6 +365,15 @@ th label {
 	vertical-align: middle;
 }
 
+
+// COLOR PICKER
+// ------------------------------
+.sm-colorbox {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+
 // JQUERY UI STUFF
 // -------------------------
 
