--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/site.less
@@ -689,7 +689,7 @@ fieldset > legend {
 @baseBlockHeaderGradient: @var_ContainerHeaderBackground;
 
 .block.block-bordered {
-	background: @var_ContainerBackground;
+	background: @var_ContainerBodyBackground;
 	border: 1px solid @var_ContainerBorder;
 	.border-radius(@baseBlockRadius);
 	margin: 0 0 10px 0;
@@ -729,7 +729,7 @@ fieldset > legend {
 
 .block.block-bordered .block-body {
 	padding: 10px;
-	background: @var_ContainerBodyBackground;
+	//background: @var_ContainerBodyBackground;
 	color: @var_ContainerBodyFontColor;
 
 	#content-left & { 
