Spliited main theme's "site.less" into many smaller files. This way creating child themes is really fun ;-)

--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/theme.less
@@ -6,12 +6,38 @@
 @import "~/.db/themevars.less";
 
 // Fonts
+@import "typo.less";
 @import "~/Content/fonts/fontastic.less";
 
 // Bootstrap
 @import "bootstrap.less";
 
 // Main
-@import "~/Content/theme.common.less";
-@import "site.less";
+@import "common.less";
+@import "layout.less";
+@import "shopbar.less";
+@import "header.less";
+@import "nav.less";
+@import "blocks.less";
+@import "datalist.less";
+@import "listscroller.less";
+@import "paginator.less";
+@import "rating.less";
+@import "pages.less";
+@import "cart.less";
+@import "login.less";
+@import "profile.less";
+@import "catalog.less";
+@import "product.less";
+@import "productfilter.less";
+@import "news.less";
+@import "blog.less";
+@import "forum.less";
+@import "poll.less";
+@import "footer.less";
+@import "misc.less";
+
+@import "skin.less";
+
+@import "custom.less";
 @import "user.less";
