--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/custom.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/custom.less
@@ -1,6 +1,6 @@
 //
 // Customize the (child) theme here with css overrides
-// or new selectors (for users)
+// or new selectors (for theme developers))
 // --------------------------------------------------
 
 
