Bug fixes and minor improvements

--- a/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Customer/_CreateOrUpdate.cshtml
@@ -111,7 +111,7 @@
                 @if (Model.Id > 0)
                 {
                     <button type="submit" name="changepassword" value="changepassword" class="btn">
-                        <i class="fa fa-pencil"></i>&nbsp;Change password
+                        <i class="fa fa-gear"></i>&nbsp;Change password
 					</button>
                 }
             </td>
