--- a/src/Presentation/SmartStore.Web/Administration/Views/CustomerRole/_CreateOrUpdate.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/CustomerRole/_CreateOrUpdate.cshtml
@@ -1,8 +1,10 @@
 ﻿@model CustomerRoleModel
 
 @using Telerik.Web.Mvc.UI;
+
 @Html.ValidationSummary(true)
 @Html.HiddenFor(model => model.Id)
+
 <table class="adminContent">
     <tr>
         <td class="adminTitle">
@@ -31,8 +33,6 @@
             @Html.ValidationMessageFor(model => model.FreeShipping)
         </td>
     </tr>
-
-    <!-- codehint: sm-add begin -->
     <tr>
         <td class="adminTitle">
             @Html.SmartLabelFor(model => model.TaxDisplayType)
@@ -42,8 +42,6 @@
             @Html.ValidationMessageFor(model => model.TaxDisplayType)
         </td>
     </tr>
-    <!-- codehint: sm-add end -->
-
     <tr>
         <td class="adminTitle">
             @Html.SmartLabelFor(model => model.TaxExempt)
@@ -67,7 +65,7 @@
             @Html.SmartLabelFor(model => model.IsSystemRole)
         </td>
         <td class="adminData">
-            @Model.IsSystemRole.ToString()
+			@T(Model.IsSystemRole ? "Admin.Common.Yes" : "Admin.Common.No")
             @Html.HiddenFor(model => model.IsSystemRole)
             @Html.ValidationMessageFor(model => model.IsSystemRole)
         </td>
