--- a/src/Presentation/SmartStore.Web/Administration/Views/QueuedEmail/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/QueuedEmail/List.cshtml
@@ -104,14 +104,17 @@
                             .HeaderHtmlAttributes(new { style = "text-align:center" });
 
                             columns.Bound(x => x.Id).Width(50);
-                            columns.Bound(x => x.Subject).Width(300);
+                            columns.Bound(x => x.Subject).Width(500);
                             columns.Bound(x => x.Priority)
 								.Centered()
 								.Width(50);
-                            columns.Bound(x => x.From).Width(100);
-                            columns.Bound(x => x.FromName).Width(100);
-                            columns.Bound(x => x.CreatedOn).Width(100);
-                            columns.Bound(x => x.SentOn).Width(150);
+                            columns.Bound(x => x.From);
+                            columns.Bound(x => x.FromName);
+							columns.Bound(x => x.SentTries)
+								.Centered()
+								.Width(50);
+                            columns.Bound(x => x.SentOn);
+							columns.Bound(x => x.CreatedOn);
                             columns.Bound(x => x.Id)
                                 .Template(x => Html.ActionLink(T("Admin.Common.Edit").Text, "Edit", new { id = x.Id }))
                                 .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
